# cview

./: .gitignore  404.html  Cargo.toml  README.md  index.html  installation.html  installer.ini  introduction.html  org.mavensgroup.cview.yml  print.html  searcher-09f2665d.js  searcher-c2a407aa.js  searchindex-3893ebfd.js  searchindex-63f11321.js  searchindex-99d5944b.js  searchindex-cdaa801a.js  searchindex-d977ba75.js  searchindex.js  toc-6b4ea5f4.js  toc-87a09fd4.js  toc-dc41def0.js  toc.html  toc.js  todo.html
.github/workflows/: deploy.yml  release.yml
assets/: org.mavensgroup.cview.desktop
docs/: book.toml  custom.js
docs/src/: README.md  SUMMARY.md  custom.css  installation.md  introduction.md  todo.md
docs/src/guide/: analysis.md  building.md  bvs.md  charge_density.md  kpath.md  miller.md  slabs.md  supercells.md  symmetry.md  visualization.md  voids.md  xrd.md
guide/: analysis.html  building.html  bvs.html  charge_density.html  kpath.html  miller.html  slabs.html  supercells.html  symmetry.html  visualization.html  voids.html  xrd.html
src/: .symmetry.rs.swp  config.rs  custom-526988bf.js  custom-6ac2dfa5.css  elements.rs  interactions.rs  io.rs  main.rs  menu.rs  model.rs  physics.rs  preferences.rs  rendering.rs  shader.wgsl  state.rs  structure.rs  symmetry.rs  ui.rs  utils.rs
src/io/: chgcar.rs  cif.rs  experimental_xrd.rs  mod.rs  poscar.rs  qe.rs  sprkkr.rs  xrd_exp.rs  xyz.rs
src/menu/: actions.rs  actions_analysis.rs  actions_file.rs  actions_help.rs  actions_tools.rs  actions_view.rs  layout.rs  mod.rs  tool_miller.rs  tool_supercell.rs
src/model/: bs_data.rs  bvs.rs  elements.rs  miller.rs  mod.rs  structure.rs  symmetry.rs
src/panels/: left_panel.rs  mod.rs  sidebar.rs
src/physics/: analysis.rs  bond_valence.rs  kpath.rs  mod.rs  operations.rs  slab.rs  voids.rs  xrd.rs
src/physics/analysis/: bravais.rs  charge_density.rs  kpath.rs  symmetry.rs  voids.rs  voronoi.rs  xrd.rs
src/physics/bond_valence/: calculator.rs  database.rs  ml_predictor.rs  mod.rs
src/physics/operations/: basis.rs  conversion.rs  miller_algo.rs  mod.rs  slab.rs  supercell.rs
src/rendering/: export.rs  mod.rs  painter.rs  polyhedra.rs  polyhedra_lighting.rs  primitives.rs  scene.rs  sprite_cache.rs
src/ui/: analysis.rs  dialogs.rs  export_dialog.rs  geometry.rs  interactions.rs  measurement_window.rs  mod.rs  preferences.rs
src/ui/analysis/: charge_density_tab.rs  kpath_tab.rs  mod.rs  slab_tab.rs  symmetry_tab.rs  voids_tab.rs  window.rs  xrd_tab.rs
src/ui/dialogs/: atom_instances_dlg.rs  basis_dlg.rs  miller_dlg.rs  mod.rs  supercell_dlg.rs
src/utils/: console.rs  geometry.rs  linalg.rs  logger.rs  mod.rs  report.rs  spatial_grid.rs
theme/: head.hbs
tutorials/: bi2se3.html  surface.html
