#// Cargo.toml

[package]
name = "cview"
version = "0.1.0"
edition = "2021"

[dependencies]
gtk4 = { version = "0.8", features = ["v4_6"] }
cairo-rs = { version = "0.19", features = ["pdf", "png"] }
gdk4 = "0.8"
moyo = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
directories = "5.0"
plotters = "0.3"
plotters-cairo = "0.6"
nalgebra = { version = "0.34", default-features = false, features = ["macros", "std"] }
num-complex = "0.4"
rayon = "1.8"
spglib = "1.15"
calamine = "0.24"


[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
